--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @import "tailwindcss";
+@import url("https://fonts.cdnfonts.com/css/sora-3");
 
+@theme {
+    --default-font-family: 'Sora', sans-serif;
+}
 
