--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.cdnfonts.com/css/sora-3");
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
 @import "tailwindcss";
 
 @theme {
-    --default-font-family: 'Sora', sans-serif;
+    --default-font-family: "Sora", serif;
 }
 
